[gd_scene load_steps=6 format=3 uid="uid://bvql55m7tbwvc"]

[ext_resource type="Script" path="res://HUD.gd" id="1_lhjq1"]
[ext_resource type="Texture2D" uid="uid://b2vofur5f884e" path="res://Assets/ProgressBar/Empty Bar.png" id="2_0ll0b"]
[ext_resource type="Texture2D" uid="uid://qr0d5vtrjoay" path="res://Assets/ProgressBar/FullHealthBar.png" id="3_phluy"]
[ext_resource type="Texture2D" uid="uid://dfq5aao0r3p7g" path="res://Assets/ProgressBar/FullStaminaBar.png" id="4_8guwg"]

[sub_resource type="LabelSettings" id="LabelSettings_1o8g8"]
font_size = 64

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_lhjq1")

[node name="Health" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -295.0
offset_top = 536.0
offset_right = -148.0
offset_bottom = 562.0
grow_horizontal = 2
text = "Health Placheolder
"
horizontal_alignment = 1

[node name="Stamina" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.545
anchor_bottom = 3.0
offset_left = -326.0
offset_top = 581.0
offset_right = -164.84
offset_bottom = -1319.0
grow_horizontal = 2
grow_vertical = 2
text = "Stamina Placeholder
"
horizontal_alignment = 1

[node name="Actions" type="Label" parent="."]
visible = false
offset_left = 12.0
offset_top = 13.0
offset_right = 165.0
offset_bottom = 39.0
text = "Actions Placeholder
"

[node name="AvailableMovement" type="Label" parent="."]
visible = false
offset_left = 950.0
offset_top = 609.0
offset_right = 1129.0
offset_bottom = 635.0
text = "Movement placeholder"

[node name="HealthBar" type="TextureProgressBar" parent="."]
anchors_preset = -1
anchor_right = 0.017
anchor_bottom = 0.062
offset_left = 73.0
offset_top = 541.0
offset_right = 453.416
offset_bottom = 550.824
rotation = -3.14159
scale = Vector2(-0.5, -0.5)
value = 100.0
texture_under = ExtResource("2_0ll0b")
texture_progress = ExtResource("3_phluy")

[node name="StaminaBar" type="TextureProgressBar" parent="."]
anchors_preset = -1
anchor_right = 0.017
anchor_bottom = 0.062
offset_left = 271.0
offset_top = 609.0
offset_right = 651.416
offset_bottom = 618.824
rotation = -3.14159
scale = Vector2(0.5, 0.5)
value = 100.0
texture_under = ExtResource("2_0ll0b")
texture_progress = ExtResource("4_8guwg")

[node name="DamageButton" type="Button" parent="."]
offset_left = 1012.0
offset_top = 26.0
offset_right = 1084.0
offset_bottom = 103.0
text = "Deal
One
Damage
"

[node name="FullHeal" type="Button" parent="."]
offset_left = 1010.0
offset_top = 116.0
offset_right = 1085.0
offset_bottom = 147.0
text = "Full Heal
"

[node name="Refill Movement" type="Button" parent="."]
offset_left = 988.0
offset_top = 162.0
offset_right = 1123.0
offset_bottom = 203.0
text = "Refill Movement"

[node name="ZoomScale" type="Label" parent="."]
offset_left = 42.0
offset_top = 243.0
offset_right = 82.0
offset_bottom = 266.0

[node name="FightIndicator" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_right = 0.183
anchor_bottom = 0.221
offset_left = 222.0
offset_top = 185.0
offset_right = 675.184
offset_bottom = 324.792
text = "Get Ready For a fight!"
label_settings = SubResource("LabelSettings_1o8g8")

[connection signal="pressed" from="DamageButton" to="." method="_on_damage_button_pressed"]
[connection signal="pressed" from="FullHeal" to="." method="_on_full_heal_pressed"]
[connection signal="pressed" from="Refill Movement" to="." method="_on_refill_movement_pressed"]
